fix(view-transition): z-index hotfix

--- a/src/global.css
+++ b/src/global.css
@@ -115,18 +115,28 @@ body {
 
 @keyframes slide-from-right {
   from {
-    transform: translateX(30px);
+    transform: translateY(30px);
   }
 }
 
 @keyframes slide-to-left {
   to {
-    transform: translateX(-30px);
+    transform: translateY(-30px);
   }
 }
 
-.view-transition-target {
+.view-transition-target-root {
   view-transition-name: root;
+  contain: layout;
+}
+
+.view-transition-target-navrail {
+  view-transition-name: navrail;
+  contain: layout;
+}
+
+.view-transition-target-cursor {
+  view-transition-name: cursor;
   contain: layout;
 }
 
@@ -137,5 +147,23 @@ body {
 
 ::view-transition-new(root) {
   animation: 210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
-    300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-down;
+    300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+}
+
+/* Z-Index hotfix */
+
+::view-transition-old(navrail) {
+  animation: 0ms linear both fade-out;
+}
+
+::view-transition-new(navrail) {
+  animation: 0ms linear both fade-in;
+}
+
+::view-transition-old(cursor) {
+  animation: 0ms linear both fade-out;
+}
+
+::view-transition-new(cursor) {
+  animation: 0ms linear both fade-in;
 }
